# JNTU-Results

./: README.md  Results.db  app.py  extract.py  main.py  pyproject.toml  scrape.py
Extraction_Output/: Results.csv
