[project]
name = "jntu-results"
version = "0.1.0"
description = "JNTU-GV IT R20 2021-Batch Results"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
    "playwright>=1.57.0",
    "plotly>=6.5.1",
    "pymupdf>=1.26.7",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
]
